<resources>
    <string name="app_name">3-Rivers Drill/Blast</string>
    <string name="new_project_button">New Project</string>
    <string name="project_name_label">Project Name</string>
    <string name="contractor_name_label">Contractor Name</string>
    <string name="driller_name_label">Driller Name</string>
    <string name="shot_number_label">Shot Number</string>
    <string name="start_date_label">Start Date</string>
    <string name="save_button">Save</string>
    <string name="bit_size_label">Bit Size</string>
    <string name="new_drill_log_button">New Drill Log</string>
    <string name="title_activity_daily_log">DailyLogActivity</string>
    <string name="drill_id_label">Drill #</string>
    <string name="gallons_fuel_label">Gallons Fuel</string>
    <string name="daily_log_date_label">Date</string>
    <string name="meter_start_label">Meter Start</string>
    <string name="meter_end_label">Meter End</string>
    <string name="bulk_tank_label">Bulk Tank Pumped From</string>
    <string name="percussion_time_label">Percussion Time</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_daily_list">DailyListActivity</string>
    <string name="new_daily_log_button">Create New Daily Log</string>
    <string name="hint_email">User Name</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>

    <string name="menu_refresh">Refresh</string>
    <string name="menu_save">Save</string>
    <string name="menu_settings">Settings</string>
    <string name="projectList">Project List</string>
    <string name="gridActivity">Drilling Grid</string>
    <string name="managerGridActivity">Manager Drilling Grid</string>
    <string name="drillList">Drill Log List</string>
    <string name="dailyList">Daily Log</string>
    <string name="drillLog">Drill Log</string>
    <string name="dailyLogList">Daily Log List</string>
    <string name="projectActivity">Project</string>
    <string name="drillInfo">Hole Information</string>

    <string name="signature">SignaturePad</string>
    <string name="agreement">I have audited and verified the accuracy of this project.</string>
    <string name="clear_pad">Clear Pad</string>
    <string name="save_signature">Accept</string>
    <string name="printed_name_label">Printed Name</string>
</resources>
