<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.DailyLogActivity"
    tools:showIn="@layout/activity_daily_log">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/drill_id_label"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:editable="false"
        android:text="@string/drill_id_label"

        />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/drill_id_text_field"
        android:layout_below="@+id/drill_id_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/drill_id_label"
        android:layout_alignEnd="@+id/drill_id_label" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/gallons_fuel_label"
        android:layout_below="@+id/drill_id_text_field"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/gallons_fuel_label"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/gallons_fuel_text_field"
            android:layout_below="@+id/gallons_fuel_label"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/daily_log_date_label"
            android:layout_below="@+id/gallons_fuel_text_field"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/daily_log_date_label"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/daily_log_date_text_field"
            android:layout_below="@+id/daily_log_date_label"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textAppearance="?android:attr/textAppearanceMedium"
           android:id="@+id/meter_start_label"
           android:text="@string/meter_start_label"
           android:layout_below="@+id/daily_log_date_text_field"
           android:layout_alignParentLeft="true"
           android:layout_alignParentStart="true" />

       <EditText
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:inputType="number"
           android:ems="10"
           android:id="@+id/meter_start_text_field"
           android:layout_below="@+id/meter_start_label"
           android:layout_alignParentLeft="true"
           android:layout_alignParentStart="true"
           android:layout_alignRight="@+id/daily_log_date_text_field"
           android:layout_alignEnd="@+id/daily_log_date_text_field"
           android:numeric="integer" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/meter_end_label"
            android:text="@string/meter_end_label"
            android:layout_below="@+id/meter_start_text_field"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/meter_end_text_field"
            android:layout_below="@+id/meter_end_label"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/bulk_tank_label"
        android:text="@string/bulk_tank_label"
        android:layout_below="@+id/meter_end_text_field"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/bulk_tank_text_field"
            android:layout_below="@+id/bulk_tank_label"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/meter_end_text_field"
            android:layout_alignEnd="@+id/meter_end_text_field" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/percussion_time_label"
        android:text="@string/percussion_time_label"
        android:layout_below="@+id/bulk_tank_text_field"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/percussion_time_text_field"
        android:layout_below="@+id/percussion_time_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/save_daily_log_button"
        android:text="@string/save_button"
        android:background="#4aec68"
        android:layout_below="@+id/percussion_time_text_field"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:drawableTop="@mipmap/ic_save_black_24dp"
        />


</RelativeLayout>
