<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.DailyLogActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/drill_id_label"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageButton"
        android:editable="false"
        android:text="@string/drill_id_label"/>


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/drill_id_text_field"
        android:layout_below="@+id/drill_id_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/drill_id_label"
        android:layout_alignEnd="@+id/drill_id_label" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/gallons_fuel_label"
        android:layout_below="@+id/drill_id_text_field"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/gallons_fuel_label"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/gallons_fuel_text_field"
        android:layout_below="@+id/gallons_fuel_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/daily_log_date_label"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/daily_log_date_label"
        android:layout_alignBottom="@+id/daily_log_date_text_field"
        android:gravity="center_vertical" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/daily_log_date_text_field"
        android:onClick="showDatePickerDialog"
        android:text="12/12/12"
        android:layout_alignTop="@+id/imageButton"
        android:layout_alignBottom="@+id/imageButton"
        android:gravity="center_vertical|right"
        android:layout_toLeftOf="@+id/imageButton"
        android:layout_toRightOf="@+id/percussion_time_label"
        android:layout_toEndOf="@+id/percussion_time_label" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/meter_start_label"
        android:text="@string/meter_start_label"
        android:layout_below="@+id/gallons_fuel_text_field"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/meter_start_text_field"
        android:layout_below="@+id/meter_start_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:numeric="integer"
        android:layout_alignRight="@+id/meter_end_text_field"
        android:layout_alignEnd="@+id/meter_end_text_field" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/meter_end_label"
        android:text="@string/meter_end_label"
        android:layout_below="@+id/meter_start_text_field"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/meter_end_text_field"
        android:layout_below="@+id/meter_end_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/bulk_tank_label"
        android:text="@string/bulk_tank_label"
        android:layout_below="@+id/meter_end_text_field"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/bulk_tank_text_field"
        android:layout_below="@+id/bulk_tank_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/meter_end_text_field"
        android:layout_alignEnd="@+id/meter_end_text_field" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/percussion_time_label"
        android:text="@string/percussion_time_label"
        android:layout_below="@+id/bulk_tank_text_field"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/percussion_time_text_field"
        android:layout_below="@+id/percussion_time_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton"
        android:src="@mipmap/ic_event_black_24dp"
        android:onClick="showDatePickerDialog"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/drill_id_label"
        android:layout_alignEnd="@+id/drill_id_label" />

</RelativeLayout>
